--- a/Other/index.html
+++ b/Other/index.html
@@ -195,7 +195,7 @@
     </video>
 
     <div id="buttons">
-        <button id="home" title="Home">HOME</button>
+        <button id="home" title="Go to Home Page">HOME</button>
         <button id="stopVideo" title="Stop the video">🟥</button>
         <button id="startVideo" title="Restart the video">▶️</button>
     </div>
