--- a/Other/index.html
+++ b/Other/index.html
@@ -186,8 +186,8 @@
 
 <body>
 
-    <img id="crack2" src="crack2.png"><img id="crack" src="crack.png"><img id="tv" src="tv.png"><video id="helloWorld"
-        autoplay muted loop poster="OtherBack.jpg">
+    <img id="hole" src="hole.png"><img id="crack2" src="crack2.png"><img id="crack" src="crack.png"><img id="tv"
+        src="tv.png"><video id="helloWorld" autoplay muted loop poster="OtherBack.jpg">
         <source src="HelloWorld_Other.mp4">
     </video>
     <video id="helloWorldGlitch" autoplay muted loop poster="OtherBack.jpg">
@@ -274,6 +274,7 @@
         $('document').ready(function () {
             $('#crack').hide();
             $('#crack2').hide();
+            $('#hole').hide();
             $('#helloWorldGlitch').hide();
             $('#repair').hide();
             document.querySelector('#broken_note').innerText = "[Note : Do not touch the TV, it is very old and might break. In case you're curious, try it, ONCE.]";
@@ -285,6 +286,7 @@
                 setTimeout(function () {
                     $("#crack").fadeIn(200);
                     $("#crack2").fadeIn(200);
+                    $("#hole").fadeIn(200);
                     document.querySelector('#helloWorldGlitch').currentTime = document.querySelector('#helloWorld').currentTime;
                     $("#helloWorldGlitch").fadeIn(200);
                     $("#repair").fadeIn(400);
@@ -318,6 +320,7 @@
             if (broken == 1) {
                 $("#crack").fadeOut('slow');
                 $("#crack2").fadeOut('slow');
+                $("#hole").fadeOut('slow');
                 $("#helloWorldGlitch").fadeOut('slow');
                 $("#repair").fadeOut(400);
                 setTimeout(function () {
