--- a/Student/index.html
+++ b/Student/index.html
@@ -144,7 +144,7 @@
 
             <div class="lightBack">
                 <div id="sources">
-                    <h2 style="background-color: #ee999a;">Some good online resources to learn coding<br /><img
+                    <h2 style="background-color: #ee999a;">Some good online resources to<br />learn coding<br /><img
                             id="wordcloud" src="wordcloud.png"></h2>
                     <div id="sourceInfo">
                         <p id="sourceP1">
