--- a/Other/index.html
+++ b/Other/index.html
@@ -65,14 +65,16 @@
         }
 
         h3 {
-            width: 20%;
-            padding: 0.5vw 0.5vw;
             /* margin: 0vw auto 0vw auto; */
             /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
             font-family: "Electrolize", sans-serif;
             color: #00ff4c;
             background-color: rgb(37, 38, 91);
             text-align: center;
+            position: absolute;
+            z-index: 3;
+            left: 50%;
+            transform: translate(-50%, 0%);
         }
 
         #tv {
@@ -86,6 +88,13 @@
         #tvDiv {
             width: 100%;
             position: absolute;
+            padding-bottom: 2vw;
+        }
+
+        #cdNote {
+            max-height: fit-content;
+            display: flex;
+            align-items: center;
         }
 
         #helloWorld,
@@ -97,14 +106,12 @@
         }
 
         #buttons {
-            width: 55%;
             height: max-content;
             background-color: #281206;
             /* border: 0.05vw solid rgb(167, 166, 166); */
             margin: 0 auto;
-            padding: 0.5vw;
+            padding: 0.7vw 0.5vw;
             position: relative;
-            top: 0.1vw;
             z-index: 2;
             display: flex;
             justify-content: center;
@@ -339,7 +346,7 @@
             $('#repair').hide();
             document.querySelector('#broken_note').innerHTML = "<marquee>[Note : Do not touch the TV, it is very old and might break. In case you're curious, try it, ONCE.]</marquee>";
             document.querySelector('#repair').innerText = "Repair the TV";
-            document.querySelector('marquee').setAttribute('scrollamount', '4');
+            document.querySelector('marquee').setAttribute('scrollamount', '4.5');
         })
 
         document.querySelector("#tv").addEventListener('click', function () {
@@ -369,6 +376,8 @@
                             document.querySelector('#broken_note').innerHTML = "<marquee>I have given up... Enjoy :)</marquee>";
                         }
                     }
+
+                    document.querySelector('marquee').setAttribute('scrollamount', '4.5');
 
                 }, 380);
 
@@ -408,6 +417,8 @@
                             document.querySelector('#repair').innerText = "Repair the TV if you want";
                         }
                     }
+
+                    document.querySelector('marquee').setAttribute('scrollamount', '4.5');
                 }, 300);
                 // $('#crack').hide();
                 // $('#crack2').hide();
