--- a/Game/Game.html
+++ b/Game/Game.html
@@ -20,8 +20,8 @@
     <div id="settings">
         <button id="switch" class="set" value=1 title="View virtual keys">Enable virtual keys</button>
         <button id="restart" class="set" title="Restart the game">Restart</button>
-        <button id="instructions" class="set" title="Game details"><a href="instructions.html"
-                id="help">Help</a></button>
+        <button id="instructions" class="set" title="Game details"
+            onclick="window.location.href='instructions.html'">Help</button>
         <button id="level">Level : -    Score : -</button>
         <button id="back" title="Back to portfolio" onclick="backToPortfolio()">&#8676;</button>
         <button id="close" title="Quit">&#10006;</button>
