--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -229,7 +229,7 @@
 
         <hr />
         <h5 style="margin: 0 auto; padding: 5vw; font-weight: 200;">
-            <big>Check these out</big><br />
+            <big>Make sure to check these out</big><br />
             1) <button title="Go to Student page" class="otherPage"
                 onclick="otherPage('../Student/index.html')">'Student'</button> page   
             2) <button title="Go to Other page" class="otherPage"
