--- a/Student/index.html
+++ b/Student/index.html
@@ -230,7 +230,7 @@
 
             <h5 style="margin: 0 auto; padding: 2.5vw; font-weight: 200;">
                 <div>
-                    <big>Check these out</big><br />
+                    <big>Make sure to check these out</big><br />
                     1) <button title="Go to Recruiter page" class="otherPage"
                         onclick="otherPage('../Recruiter/index.html')">'Recruiter'</button> page   
                     2) <button title="Go to Other page" class="otherPage"
