--- a/Other/index.html
+++ b/Other/index.html
@@ -30,18 +30,18 @@
         }
 
         #container {
-            /* background-image: url('background1.jpg');
-            background-repeat: no-repeat; */
-            background-image: linear-gradient(to right, #b2b9b7, #5f7973);
+            background-image: url('../body_background.jpg');
+            /* background-image: linear-gradient(to right, #b2b9b7, #5f7973); */
+            /* background-color: #F2E9D9; */
             width: 100%;
             display: grid;
-            grid-template-areas: 'title title' 'contact contact' 'game projects';
+            grid-template-areas: 'title title' 'contact contact';
             align-items: center;
             justify-content: center;
         }
 
         h1 {
-            max-width: 100%;
+            max-width: max-content;
             margin: 0;
             display: inline-block;
             align-items: center;
@@ -58,8 +58,9 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             color: #0f0f0f;
             /* background-color: #fca9ac; */
-            background-color: #222121;
-            color: white;
+            /* background-color: #222121; */
+            background-color: #ffc9aa;
+            /* color: white; */
             text-align: center;
             border-radius: 0.5vw 0.5vw 0 0;
         }
@@ -89,6 +90,7 @@
             width: 100%;
             position: absolute;
             padding-bottom: 2vw;
+            /* background-color: #464646; */
         }
 
         #cdNote {
@@ -121,9 +123,9 @@
 
         #hello {
             width: 100%;
-            height: 7vw;
+            height: max-content;
             text-align: center;
-            background-color: #647470;
+            background-color: #464646;
             /* margin: 4vw auto; */
         }
 
@@ -214,34 +216,14 @@
 
 <body>
 
-    <!-- <div id="hello" style="grid-area: title;">
+    <div id="hello" style="grid-area: title;">
         <h1 id="H">H</h1>
         <h1 id="E">E</h1>
         <h1 id="L1">L</h1>
         <h1 id="L2">L</h1>
         <h1 id="O">O</h1>
         <h1 id="exclamation">!</h1>
-    </div> -->
-
-    <!-- <div id="tvDiv">
-        <img id="hole2" src="hole2.png"><img id="hole" src="hole.png"><img id="crack2" src="crack2.png"><img id="crack"
-            src="crack.png"><img id="tv" src="tv.png"><video id="helloWorld" autoplay muted loop poster="OtherBack.jpg">
-            <source src="HelloWorld_Other.mp4">
-        </video>
-        <video id="helloWorldGlitch" autoplay muted loop poster="OtherBack.jpg">
-            <source src="Glitch_helloWorld.mp4">
-        </video>
-
-        <div id="buttons">
-            <button id="home" title="Go to Home Page">HOME</button>
-            <button id="stopVideo" title="Stop the video">🟥</button>
-            <button id="startVideo" title="Restart the video">▶️</button>
-        </div>
-
-        <h3 id="broken_note"></h3>
-
-        <button id="repair"></button>
-    </div> -->
+    </div>
 
     <div id="container">
 
@@ -257,9 +239,11 @@
         <div id="contact" style="grid-area: contact;">
             <h2 id="contactTitle" style="grid-area: contactTitle;">What brought you to my<br />portfolio website?</h2>
 
-            <video autoplay loop id="contactVid" muted style="grid-area: video;">
-                <source src="contactVideo.mp4">
-            </video>
+            <div id="contactVidBack">
+                <video autoplay loop id="contactVid" muted style="grid-area: video;">
+                    <source src="contactVideo.mp4">
+                </video>
+            </div>
 
             <p id="contactPara" style="grid-area: contactPara;">
                 Have anything tech-related to talk about?<br />
@@ -273,7 +257,7 @@
                         style="background-image: url('../Recruiter/gmail.png'); background-size: cover; grid-area: gmail;"
                         title="Copy email ID"></button></a>
 
-                <p style="grid-area: connect; padding: 0.1vw 0vw 3vw 0vw;">Let's connect 🔗 : </p><button id="linkedIn"
+                <p style="grid-area: connect;">Let's connect 🔗 : </p><button id="linkedIn"
                     style="background-image: url('../Recruiter/linkedIn.png'); background-size: cover; grid-area: LI;"
                     title="Go to my LinkedIn profile"></button>
             </div>
@@ -321,12 +305,12 @@
 
     <script>
 
-        // document.querySelector("#hello").addEventListener('click', function () {
-        //     document.getAnimations().forEach(function (anim) {
-        //         anim.cancel();
-        //         anim.play();
-        //     })
-        // })
+        document.querySelector("#hello").addEventListener('click', function () {
+            document.getAnimations().forEach(function (anim) {
+                anim.cancel();
+                anim.play();
+            })
+        })
 
 
         let broken = 0;
