--- a/Other/index.html
+++ b/Other/index.html
@@ -126,6 +126,9 @@
             height: max-content;
             text-align: center;
             background-color: #464646;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             /* margin: 4vw auto; */
         }
 
@@ -135,7 +138,7 @@
 
         video {
             outline: 3px solid white;
-            outline-offset: -2px;
+            outline-offset: -2.5px;
         }
 
         @keyframes letterLeft {
@@ -262,20 +265,6 @@
                     title="Go to my LinkedIn profile"></button>
             </div>
         </div>
-
-        <!-- <div id="game" style="grid-area: game;">
-            <h2>What brought you to my portfolio website?</h2>
-            <p>
-                Have anything tech-related to talk about?
-            </p>
-        </div>
-
-        <div id="projects" style="grid-area: projects;">
-            <h2>What brought you to my portfolio website?</h2>
-            <p>
-                Have anything tech related to talk about?
-            </p>
-        </div> -->
     </div>
 
     <div id="tvDiv">
