--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!--<h1>In case you're bored reviewing portfolios all day!</h1>-->
-    <div id="footer"></div>
+    <!-- <div id="footer"></div> -->
     <div id="container">
         <!--<img src="Portfolio_background.jpg" id="background">-->
 
