--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -202,11 +202,11 @@
         <hr />
         <div id="resume">
             <h3>Résumé</h3>
-            <img id="resumeImg" src="Resume/Resume_preview.png">
+            <img id="resumeImg" class="resumePreview" src="Resume/Resume_preview.png">
             <div id="resumeHover" title="View my resumé">
                 <h5 style="margin: 0 auto; background-color: #e2a7a9; color: black; padding: 1vw 0;" id="viewResume">
                     View Résumé</h5>
-                <img id="resumePreview" src="Resume/Resume_preview.png">
+                <img class="resumePreview" src="Resume/Resume_preview.png">
             </div>
         </div>
 
@@ -252,7 +252,7 @@
             <h5 class="footerH5" title="Check out my Github profile"><a href="https://github.com/astroartics"
                     target="_blank">Github
                     profile</a>
-            </h5>
+            </h5><br />
             <h5 class="footerH5" title="View image sources"><a href="Image_sources/index.html">Image sources</a></h5>
         </div>
     </footer>
