--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -249,11 +249,12 @@
         </div>
         <div id="footerLinks">
             <h3 id="moreLinksTitle" style="color: #2d2d2d;">More links</h3>
-            <h5 class="footerH5" title="Check out my Github profile"><a href="https://github.com/astroartics"
-                    target="_blank">Github
+            <h5 style="grid-area: footerh51;" class="footerH5" title="Check out my Github profile"><a
+                    href="https://github.com/astroartics" target="_blank">Github
                     profile</a>
             </h5><br />
-            <h5 class="footerH5" title="View image sources"><a href="Image_sources/index.html">Image sources</a></h5>
+            <h5 style="grid-area: footerh52;" class="footerH5" title="View image sources"><a
+                    href="Image_sources/index.html">Image sources</a></h5>
         </div>
     </footer>
 
